--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+       <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             background-color: #f0f0f0;
             font-family: Arial, sans-serif;
             color: #333;
@@ -24,24 +24,31 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.85);
+            padding: 24px 32px;
+            border-radius: 12px;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+            min-width: 320px;
+            max-width: 90vw;
         }
 
         input[type="password"],
         input[type="number"] {
-            padding: 10px;
+            padding: 12px;
             border-radius: 5px;
             border: 1px solid #ccc;
+            font-size: 1rem;
         }
 
         button {
-            padding: 10px;
+            padding: 12px;
             border-radius: 5px;
             border: none;
             background-color: #0fdf7e;
             color: white;
             cursor: pointer;
+            font-size: 1rem;
+            transition: background 0.2s;
         }
 
         button:hover {
@@ -50,6 +57,28 @@
         h1 {
             text-align: center;
             margin-bottom: 20px;
+            font-size: 1.5rem;
+        }
+
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+            form {
+                min-width: unset;
+                padding: 16px 8px;
+                border-radius: 8px;
+                box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+            }
+            h1 {
+                font-size: 1.1rem;
+            }
+            input[type="password"],
+            input[type="number"],
+            button {
+                font-size: 0.95rem;
+                padding: 10px;
+            }
         }
     </style>
 </head>
