--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             background-color: rgba(255, 255, 255, 0.85);
             padding: 24px 32px;
             border-radius: 12px;
-            box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.12);
             min-width: 320px;
-            max-width: 90vw;
+            max-width: 400px;
+            width: 100%;
         }
 
         input[type="password"],
@@ -54,6 +55,7 @@
         button:hover {
             background-color: #00b300;
         }
+
         h1 {
             text-align: center;
             margin-bottom: 20px;
@@ -62,17 +64,22 @@
 
         @media (max-width: 600px) {
             body {
-                padding: 10px;
+                padding: 0;
             }
+
             form {
                 min-width: unset;
-                padding: 16px 8px;
+                max-width: 100vw;
+                width: 100vw;
+                padding: 16px 4vw;
                 border-radius: 8px;
-                box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.10);
             }
+
             h1 {
                 font-size: 1.1rem;
             }
+
             input[type="password"],
             input[type="number"],
             button {
