--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             form {
                 min-width: unset;
                 max-width: 100vw;
-                width: 100vw;
+                width: 100%;
                 padding: 16px 4vw;
                 border-radius: 8px;
                 box-shadow: 0 2px 8px rgba(0, 0, 0, 0.10);
