--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             }
 
             form {
-                min-width: unset;
-                max-width: 100vw;
+                max-width: 100%;
                 width: 100%;
                 padding: 16px 4vw;
                 border-radius: 8px;
